--- a/Admin/index.html
+++ b/Admin/index.html
@@ -1,1 +1,230 @@
 
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>FLASH AI S1 - ADMIN PANEL</title>
+    <style>
+        * { margin: 0; padding: 0; box-sizing: border-box; }
+        body {
+            background: black;
+            font-family: Arial, sans-serif;
+            text-align: center;
+            color: white;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            height: 100vh;
+            overflow: hidden;
+        }
+        .container {
+            width: 90%;
+            max-width: 320px;
+            background: rgba(255, 255, 255, 0.1);
+            padding: 20px;
+            border-radius: 15px;
+            text-align: center;
+            box-shadow: 0 8px 32px rgba(255, 255, 255, 0.1);
+            backdrop-filter: blur(10px);
+            border: 1px solid rgba(255, 255, 255, 0.1);
+            display: none; /* Initially hidden */
+        }
+        .splash {
+            position: absolute;
+            width: 100%;
+            height: 100%;
+            background: black;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            flex-direction: column;
+            z-index: 1000;
+            animation: fadeOut 3s forwards;
+        }
+        .splash h1 {
+            font-size: 24px;
+            font-weight: bold;
+            text-shadow: 0 0 12px white;
+            animation: glow 2s infinite alternate;
+        }
+        @keyframes glow {
+            0% { text-shadow: 0 0 12px white; }
+            100% { text-shadow: 0 0 24px #ff4d4d; }
+        }
+        .loader {
+            border: 4px solid rgba(255, 255, 255, 0.2);
+            border-top: 4px solid white;
+            border-radius: 50%;
+            width: 40px;
+            height: 40px;
+            animation: spin 1s linear infinite;
+            margin-top: 10px;
+        }
+        @keyframes spin { 100% { transform: rotate(360deg); } }
+        @keyframes fadeOut {
+            0% { opacity: 1; }
+            100% { opacity: 0; visibility: hidden; }
+        }
+        h1 { font-size: 20px; margin-bottom: 10px; font-weight: bold; text-shadow: 0 0 12px white; }
+        button {
+            background: linear-gradient(45deg, #ff4d4d, #cc0000);
+            color: white;
+            font-size: 16px;
+            cursor: pointer;
+            padding: 12px 20px;
+            border: none;
+            border-radius: 8px;
+            margin: 10px 0;
+            transition: transform 0.2s, box-shadow 0.2s;
+        }
+        button:hover { transform: scale(1.05); box-shadow: 0 4px 15px rgba(255, 0, 0, 0.4); }
+        .floating {
+            display: none;
+            position: fixed;
+            top: 50%;
+            left: 50%;
+            transform: translate(-50%, -50%);
+            width: 280px;
+            background: rgba(0, 0, 0, 0.8);
+            padding: 20px;
+            border-radius: 10px;
+            text-align: center;
+            box-shadow: 0 5px 15px rgba(255, 255, 255, 0.2);
+        }
+        .floating button { margin: 5px; }
+        .close-btn {
+            background: red;
+            font-size: 14px;
+            padding: 8px 16px;
+        }
+        #generatedKey {
+            font-size: 16px;
+            margin-top: 15px;
+            color: #ff4d4d;
+        }
+        .user-list {
+            display: none;
+            position: fixed;
+            top: 50%;
+            left: 50%;
+            transform: translate(-50%, -50%);
+            width: 300px;
+            background: rgba(0, 0, 0, 0.9);
+            padding: 20px;
+            border-radius: 10px;
+            text-align: center;
+            box-shadow: 0 5px 15px rgba(255, 255, 255, 0.2);
+        }
+        .user-list p {
+            background: rgba(255, 255, 255, 0.1);
+            padding: 10px;
+            border-radius: 5px;
+            margin: 5px 0;
+            display: flex;
+            justify-content: space-between;
+            align-items: center;
+        }
+        .delete-btn {
+            background: red;
+            font-size: 12px;
+            padding: 5px 10px;
+            border: none;
+            border-radius: 5px;
+            cursor: pointer;
+        }
+    </style>
+</head>
+<body>
+
+    <!-- SPLASH SCREEN -->
+    <div class="splash">
+        <h1>Welcome To The FLASH AI S1 ADMIN PANEL</h1>
+        <div class="loader"></div>
+    </div>
+
+    <!-- MAIN PANEL -->
+    <div class="container">
+        <h1>Generate Key</h1>
+        <button onclick="openExpiryDialog()">Set Expiry</button>
+        <p id="expiryText">Expiry: Not Set</p>
+        <p id="generatedKey">Key: Not Generated</p>
+        <button onclick="generateKey()">Generate Key</button>
+        <button onclick="copyKey()">Copy Key</button>
+        <button onclick="openUserList()">Manage Users</button>
+    </div>
+
+    <!-- EXPIRY SELECTION FLOATING DIALOG -->
+    <div class="floating" id="expiryDialog">
+        <h3>Select Expiry</h3>
+        <button onclick="setExpiry('1 Day')">1 Day</button>
+        <button onclick="setExpiry('3 Days')">3 Days</button>
+        <button onclick="setExpiry('7 Days')">7 Days</button>
+        <button onclick="setExpiry('14 Days')">14 Days</button>
+        <button onclick="setExpiry('30 Days')">30 Days</button>
+        <button onclick="setExpiry('Permanent')">Permanent</button>
+        <br>
+        <button class="close-btn" onclick="closeExpiryDialog()">Close</button>
+    </div>
+
+    <!-- USER LIST PANEL -->
+    <div class="user-list" id="userListPanel">
+        <h3>Active Keys</h3>
+        <div id="userList"></div>
+        <button class="close-btn" onclick="closeUserList()">Close</button>
+    </div>
+
+    <script>
+        // Hide splash screen and show main panel after 3 seconds
+        setTimeout(() => {
+            document.querySelector(".splash").style.display = "none";
+            document.querySelector(".container").style.display = "block";
+        }, 3000);
+
+        let expiry = "";
+
+        function openExpiryDialog() { document.getElementById("expiryDialog").style.display = "block"; }
+        function closeExpiryDialog() { document.getElementById("expiryDialog").style.display = "none"; }
+        function setExpiry(value) {
+            expiry = value;
+            document.getElementById("expiryText").innerText = "Expiry: " + expiry;
+            closeExpiryDialog();
+        }
+
+        function generateKey() {
+            if (!expiry) {
+                alert("Please select expiry first!");
+                return;
+            }
+            let key = Math.random().toString(36).substring(2, 18).toUpperCase();
+            document.getElementById("generatedKey").innerText = `Key: ${key}`;
+            
+            let users = JSON.parse(localStorage.getItem("users")) || [];
+            users.push({ key, expiry });
+            localStorage.setItem("users", JSON.stringify(users));
+        }
+
+        function copyKey() {
+            let keyText = document.getElementById("generatedKey").innerText.replace("Key: ", "");
+            navigator.clipboard.writeText(keyText);
+            alert("Key copied successfully!");
+        }
+
+        function openUserList() {
+            let users = JSON.parse(localStorage.getItem("users")) || [];
+            document.getElementById("userList").innerHTML = users.map((u, i) => 
+                `<p>${u.key} <button class='delete-btn' onclick='deleteUser(${i})'>❌</button></p>`).join("");
+            document.getElementById("userListPanel").style.display = "block";
+        }
+
+        function closeUserList() { document.getElementById("userListPanel").style.display = "none"; }
+        function deleteUser(index) {
+            let users = JSON.parse(localStorage.getItem("users"));
+            users.splice(index, 1);
+            localStorage.setItem("users", JSON.stringify(users));
+            openUserList();
+        }
+    </script>
+
+</body>
+</html>
